--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="color-scheme" content="dark light" />
+    <meta name="color-scheme" content="light dark " />
     <link href="./images/favicon.ico" rel="icon" sizes="any" />
     <link href="./images/favicon.svg" rel="icon" type="image/svg+xml" />
     <link href="./images/mobile-icon.png" rel="apple-touch-icon" />
