--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
                 вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
                 её просто не существует. Исследователи
                 <a
+                  rel="noopener noreferrer"
                   class="link shadow-decorated"
                   href="https://dana.org/article/multicosts-of-multitasking/"
                   target="_blank"
