--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
           <ul class="articles-list section-rules__articles-list">
             <li>
               <article class="article">
-                <h4 class="title title-decorated">Представьте небо и облака</h4>
+                <h4 class="title title-decorated title-sub">Представьте небо и облака</h4>
                 <p>
                   Или листья в ручье. Тут дело в лёгкой медитации, которая
                   помогает успокоиться. Ведь часто именно тревожные мысли о
@@ -169,7 +169,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decorated">Включите музыку</h4>
+                <h4 class="title title-decorated title-sub">Включите музыку</h4>
                 <p>
                   Но не любую, и не любимую. Любимая может быть связана с
                   сильными положительными эмоциями, которые тоже очень сильно
@@ -181,7 +181,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decorated">Прогуляйтесь</h4>
+                <h4 class="title title-decorated title-sub">Прогуляйтесь</h4>
                 <p>
                   Или даже пробегитесь. Лучше найти парк или лес: один
                   эксперимент
@@ -201,7 +201,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decorated">Хорошо ешьте</h4>
+                <h4 class="title title-decorated title-sub">Хорошо ешьте</h4>
                 <p>
                   Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
                   которые препятствуют резким скачкам сахара в крови. Например,
@@ -213,7 +213,7 @@
             </li>
             <li>
               <article class="article">
-                <h4 class="title title-decorated">Читайте</h4>
+                <h4 class="title title-decorated title-sub">Читайте</h4>
                 <p>
                   Настоящие бумажные книги. Это правда помогает с концентрацией:
                   чтобы прочитать пост в соцсети, достаточно нескольких минут
