--- a/index.html
+++ b/index.html
@@ -16,6 +16,17 @@
     <link href="./styles/light.css" rel="stylesheet" />
     <title>Сложно сосредоточиться</title>
   </head>
+  <svg 
+    xmlns="http://www.w3.org/2000/svg" 
+    fill="currentColor" 
+    viewBox="0 0 22 21"
+>
+    <style>
+        
+    </style>
+
+  <path d="M12.356 5.435 …"/>
+</svg>
   <body class="page">
     <header class="cover header decorated-zone">
       <div class="rec" aria-hidden="true"></div>
